<resources>
    <string name="app_name">Filmix</string>

    <string name="home">Home Filmix</string>
    <string name="tenBest">Top 10</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Update</string>
    <string name="best">Up Rated</string>
    <string name="popular">Popular</string>
    <string name="search">Search film</string>
    <string name="details">Detail</string>>
    <string name="watch_list">Watch list</string>>
    <string name="descripition">Description of the film</string>>
    <string name="saved">Saved</string>>
    <string name="favorite">Favorite</string>>
    <string name="welcome">Welcome</string>>
    <string name="ic_home">Home</string>
    <string name="ic_search">Search</string>
    <string name="ic_list">List</string>

    <string name="year">2025</string>
    <string name="time">148 Minutes</string>
    <string name="gener">Action</string>

    <string name="about">Sinopse</string>
    <string name="review">Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cast">Cast </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>