<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.searchFilms.SearchListActivity"
    android:background="@color/backgroundApp">

    <LinearLayout
        android:id="@+id/linar_layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="Search"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_info"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search"
        app:searchIcon="@drawable/ic_search"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/linar_layout_bar"
        android:layout_margin="16dp"
        android:imeOptions="actionSearch"/>

<!--    <ImageView-->
<!--        android:id="@+id/ic_search_movie"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="@id/search_bar"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/search_bar"-->
<!--        app:layout_constraintTop_toTopOf="@id/search_bar"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:src="@drawable/ic_search"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_search_film"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/filme_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/backgroundApp"
        app:layout_constraintBottom_toTopOf="@id/home_search_list">

        <ImageView
            android:id="@+id/ic_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_home"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_search"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/ic_bookMark_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bookmark"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/backgroundApp">

        <TextView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/ic_home"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/ic_search"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/list"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/ic_list"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
