<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".ui.presentation.listFlims.ListFilmsActivity">

    <ImageView
        android:id="@+id/logo_filmix_home"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_filmix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


<!--    <TextView-->
<!--        android:id="@+id/title_list_films"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="16dp"-->
<!--        android:fontFamily="@font/roboto_medium"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/home"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/ten_best_films"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tenBest"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_filmix_home" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ten_best_films"
        tools:listitem="@layout/film_item">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="scrollable"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="@color/white"
        android:background="@color/backgroundApp"/>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_bar_icons_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout_home"
         />

    <LinearLayout
        android:id="@+id/linear_layout_bar_icons_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/backgroundApp"
        app:layout_constraintBottom_toTopOf="@id/home_search_list">

        <ImageView
            android:id="@+id/ic_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_home"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_search"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/ic_bookMark_list_border"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bookmark_border"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/backgroundApp">

        <TextView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/white"
            android:layout_weight="1"
           android:gravity="center"
             />

        <TextView
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/list"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/watch_list"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>