<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".ui.presentation.listFlims.ListaFilmesActivity">

    <TextView
        android:id="@+id/title_list_films"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ten_best_films"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tenBest"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_list_films" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ten_best_films"
        tools:listitem="@layout/filme_item">

    </androidx.recyclerview.widget.RecyclerView>

    <HorizontalScrollView
        android:id="@+id/horizontal_scrowView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/Watching"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerView_horizontal" />

            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/upcoming"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/the_bests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/best"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/update"
                app:layout_constraintTop_toBottomOf="@id/recyclerView_horizontal" />


            <TextView
                android:id="@+id/popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/popular"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/the_bests"
                app:layout_constraintTop_toBottomOf="@id/recyclerView_horizontal" />

        </LinearLayout>

    </HorizontalScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scrowView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_coluna"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/filme_item">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/backgroundApp"
        app:layout_constraintBottom_toTopOf="@id/home_search_list">

        <ImageView
            android:id="@+id/ic_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_home"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_search"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/ic_bookMark_list_border"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bookmark_border"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/backgroundApp">

        <TextView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textColor="@color/white"
            android:layout_weight="1"
           android:gravity="center"
             />

        <TextView
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="search"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/list"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="List"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>