<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundApp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear_layout_bar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ic_back_details"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text_details"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ic_like_details"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_bookmark_border" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_bar_details"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/imagem_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/place_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagem_placeHolder_details"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@color/backgroundApp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/imagem_background"
            app:layout_constraintStart_toStartOf="@id/imagem_background"
            app:layout_constraintTop_toBottomOf="@id/imagem_background" />

        <ImageView
            android:id="@+id/imagem_capa_details"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/place_holder"
            app:layout_constraintBottom_toBottomOf="@id/imagem_placeHolder_details"
            app:layout_constraintEnd_toEndOf="@id/imagem_placeHolder_details"
            app:layout_constraintStart_toStartOf="@id/imagem_placeHolder_details"
            app:layout_constraintTop_toTopOf="@id/imagem_placeHolder_details" />

        <TextView
            android:id="@+id/text_title_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/imagem_capa_details"
            app:layout_constraintTop_toBottomOf="@id/imagem_background"
            tools:text="The Punisher" />

        <LinearLayout
            android:id="@+id/Linear_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_film">

            <TextView
                android:id="@+id/text_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/div_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/div_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_gener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gener"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            android:background="@color/backgroundApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Linear_layout_detail"
            app:tabIndicatorColor="@color/white"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager2_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout_detail"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>